Simple website updates

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <title>Work Portfolio</title>
         <meta charset="UTF-8">
         <meta name="description" content="My simple website of my work portfolio">
-        <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style></style>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Porfolio of Sinethemba Tompelo</h1>
     </body>
 </html>
