My website changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
         <meta charset="UTF-8">
         <meta name="description" content="My simple website of my work portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style></style>
+        <style>
+            html {
+                background-color: lightgray;
+            }
+              
+            h1 {
+                color: black;
+            }
+        </style>
     </head>
     <body>
         <h1>Porfolio of Sinethemba Tompelo</h1>
