Simple Website updates

--- a/index.html
+++ b/index.html
@@ -7,15 +7,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             html {
-                background-color: lightgray;
+                background-color: black;
             }
               
             h1 {
-                color: black;
+                color: whitesmoke;
+                display: flex;
+                justify-content: center;
+                font-size: 5rem;
+            }
+            
+            div {
+                text-align: center;
+            }
+
+            #photo-caption {
+                color: whitesmoke;
+                display: flex;
+                justify-content: center;
+                font-weight: bold;
+                font-size: 2rem;
+                margin-bottom: 50px;
+            }
+
+            h2 {
+                color: whitesmoke;
+                font-size: 3rem;
             }
         </style>
     </head>
     <body>
-        <h1>Porfolio of Sinethemba Tompelo</h1>
+        <h1> Work Porfolio of Sinethemba Tompelo</h1>
+        <br>
+        <div>
+            <img src="./images/Snax-solving-rubik-cube-resized-again.jpg" alt="Young black man solving a Rubik cube">
+        </div>
+        <p id="photo-caption">Sinethemba Tompelo is smiling through the pain, trying to solve the Rubik cube.</p>
+        <br>
+        <h2>Bio</h2>
     </body>
 </html>
