--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 color: whitesmoke;
                 display: flex;
                 justify-content: center;
-                font-size: 5rem;
+                font-size: 4rem;
             }
             
-            div {
+            #image {
                 text-align: center;
             }
 
@@ -34,16 +34,92 @@
                 color: whitesmoke;
                 font-size: 3rem;
             }
+
+            ol {
+                color: whitesmoke;
+                font-size: 1.5rem;
+                margin-bottom: 50px;
+            }
+
+            span {
+                font-weight: bolder;
+                color: red;
+            }
+
+            ul {
+                color: whitesmoke;
+                font-size: 1.5rem;
+            }
+
+            #skills {
+                margin: 10px 10px 10px 10px;
+            }
+
+            #social-platform {
+                margin: 10px 10px 10px 10px;
+            }
         </style>
     </head>
     <body>
         <h1> Work Porfolio of Sinethemba Tompelo</h1>
         <br>
-        <div>
+        <div id="image">
             <img src="./images/Snax-solving-rubik-cube-resized-again.jpg" alt="Young black man solving a Rubik cube">
         </div>
         <p id="photo-caption">Sinethemba Tompelo is smiling through the pain, trying to solve the Rubik cube.</p>
         <br>
         <h2>Bio</h2>
+        <ol>
+            <li>
+                He is <span>21 years old</span>.
+            </li>
+            <li>
+                He <span>matriculated in 2020 at Athlone Boys' High School</span>, in Johannesburg.
+            </li>
+            <li>
+                He <span>enjoys spending time on problem-solving hobbies</span>,<span> mainly playing chess</span>. 
+            </li>
+            <li>
+                He <span>currently lives in Hillbrow</span>.
+            </li>
+            <li>
+                He <span>discovered the passion for coding in September 2022</span>, <span>same time he had underwent basic computer training</span>. 
+            </li>
+            <li>
+                He <span>is very introverted, but not afraid to talk</span>.
+            </li>
+        </ol>
+        <br>
+        <h2>Skills</h2>
+        <ul>
+            <li>
+                Python: NumPy, Pandas & Matplotlib
+            </li>
+            <img id="skills" src="./images/python3-icon-resized.png" alt="Python 3 logo">
+            <img id="skills" src="./images/pandas-icon-resized.png" alt="Pandas package logo">
+            <img id="skills" src="./images/numpy-icon-resized.png" alt="Numpy package logo">
+            <img id="skills" src="./images/matplotlib-icon-resized.png" alt="Matplotlib library logo">
+            <li>
+                Git & GitHub
+            </li>
+            <img id="skills" src="./images/git-icon.png" alt="Git logo">
+            <img id="skills" src="./images/github-icon-resized.png" alt="GitHub logo">
+            <li>
+                HTML5 & CSS3
+            </li>
+            <img id="skills" src="./images/html5-and-css3-logo-resized.png" alt="HTML5 and CSS3 logos">
+            <li>
+                SQL: PostgreSQL
+            </li>
+            <img id="skills" src="./images/postgresql-logo-resized.png" alt="PostgreSQL logo">
+        </ul>
+        <br>
+        <h2>Social Platforms</h2>
+        <a href="https://www.instagram.com/snax_the_klown/" target="_blank">
+            <img id="social-platform" src="./images/instagram-logo-resized.png" alt="@snax_the_klown">
+        </a>
+        <a href="https://github.com/Snax777" target="_blank">
+            <img id="social-platform" src="./images/github-logo.png">
+        </a>
     </body>
 </html>
