Simple Website update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             html {
                 background-color: black;
             }
+
+            body {
+                padding: 20px;
+            }
               
             h1 {
                 color: whitesmoke;
@@ -58,6 +62,10 @@
             #social-platform {
                 margin: 10px 10px 10px 10px;
             }
+
+            #C-V {
+                font-size: 1.5rem;
+            }
         </style>
     </head>
     <body>
@@ -83,7 +91,7 @@
                 He <span>currently lives in Hillbrow</span>.
             </li>
             <li>
-                He <span>discovered the passion for coding in September 2022</span>, <span>same time he had underwent basic computer training</span>. 
+                He <span>discovered the passion for coding in September 2022</span>, <span> the same time he had underwent basic computer training</span>. 
             </li>
             <li>
                 He <span>is very introverted, but not afraid to talk</span>.
@@ -121,5 +129,8 @@
         <a href="https://github.com/Snax777" target="_blank">
             <img id="social-platform" src="./images/github-logo.png">
         </a>
+        <br>
+        <h2>C.V.</h2>
+        <a id="C-V" href="./curriculum-vitae/C.V..pdf" target="_blank">Click here to view my C.V.</a>
     </body>
 </html>
