--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             }
 
             body {
-                padding: 20px;
+                padding: 30px;
             }
               
             h1 {
@@ -65,6 +65,7 @@
 
             #C-V {
                 font-size: 1.5rem;
+                color: whitesmoke;
             }
         </style>
     </head>
@@ -131,6 +132,6 @@
         </a>
         <br>
         <h2>C.V.</h2>
-        <a id="C-V" href="./curriculum-vitae/C.V..pdf" target="_blank">Click here to view my C.V.</a>
+        <p id="C-V">To view my C.V.,<a href="./curriculum-vitae/C.V..pdf" target="_blank"> click here.</a></p>
     </body>
 </html>
