--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
         </a>
         <br>
         <h2>C.V.</h2>
-        <p id="C-V">To view my C.V., <a href="./curriculum-vitae/C.V..pdf" target="_blank">click here.</a></p>
+        <p id="C-V">To view my C.V., <a href="./curriculum-vitae/C.V..pdf" target="_blank">click here</a>.</p>
     </body>
 </html>
