--- a/index.html
+++ b/index.html
@@ -67,16 +67,13 @@
             margin: 10px;
         }
 
+        #C-V {
+            font-size: 1.5rem;
+        }
+
         .cv-link {
-            display: block;
-            margin-top: 20px;
-            text-align: center;
             font-size: 1.5rem;
             color: whitesmoke;
-            text-decoration: none;
-            border: 1px solid whitesmoke;
-            padding: 10px;
-            border-radius: 5px;
         }
 
         .cv-link:hover {
