Simple Website update

--- a/index.html
+++ b/index.html
@@ -101,26 +101,30 @@
 
     <h2>Skills</h2>
     <ul>
-        <li>Python: NumPy, Pandas & Matplotlib</li>
-        <div class="skills-icons">
-            <img src="./images/python3-icon-resized.png" alt="Python 3 logo">
-            <img src="./images/pandas-icon-resized.png" alt="Pandas package logo">
-            <img src="./images/numpy-icon-resized.png" alt="Numpy package logo">
-            <img src="./images/matplotlib-icon-resized.png" alt="Matplotlib library logo">
-        </div>
-        <li>Git & GitHub</li>
-        <div class="skills-icons">
-            <img src="./images/git-icon.png" alt="Git logo">
-            <img src="./images/github-icon-resized.png" alt="GitHub logo">
-        </div>
-        <li>HTML5 & CSS3</li>
-        <div class="skills-icons">
-            <img src="./images/html5-and-css3-logo-resized.png" alt="HTML5 and CSS3 logos">
-        </div>
-        <li>SQL: PostgreSQL</li>
-        <div class="skills-icons">
-            <img src="./images/postgresql-logo-resized.png" alt="PostgreSQL logo">
-        </div>
+        <li>Python: NumPy, Pandas & Matplotlib
+            <div class="skills-icons">
+                <img src="./images/python3-icon-resized.png" alt="Python 3 logo">
+                <img src="./images/pandas-icon-resized.png" alt="Pandas package logo">
+                <img src="./images/numpy-icon-resized.png" alt="Numpy package logo">
+                <img src="./images/matplotlib-icon-resized.png" alt="Matplotlib library logo">
+            </div>
+        </li>
+        <li>Git & GitHub
+            <div class="skills-icons">
+                <img src="./images/git-icon.png" alt="Git logo">
+                <img src="./images/github-icon-resized.png" alt="GitHub logo">
+            </div>
+        </li>
+        <li>HTML5 & CSS3
+            <div class="skills-icons">
+                <img src="./images/html5-and-css3-logo-resized.png" alt="HTML5 and CSS3 logos">
+            </div>
+        </li>
+        <li>SQL: PostgreSQL
+            <div class="skills-icons">
+                <img src="./images/postgresql-logo-resized.png" alt="PostgreSQL logo">
+            </div>
+        </li>
     </ul>
 
     <h2>Social Platforms</h2>
