--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <img src="./images/instagram-logo-resized.png" alt="@snax_the_klown">
         </a>
         <a href="https://github.com/Snax777" target="_blank">
-            <img src="./images/github-logo.png" alt="GitHub logo" alt="github.com/Snax777">
+            <img src="./images/github-logo.png" alt="github.com/Snax777">
         </a>
     </div>
 
