Added chess app project

--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
             color: black;
         }
 
+        .project-link {
+            font-size: 1.5rem;
+            color: whitesmoke;
+        }
+
+        .project-link:hover {
+            background-color: gray;
+            color: white;
+        }
+
     </style>
 </head>
 <body>
@@ -166,11 +176,14 @@
         <li>Notebooks:
             <ul>
                 <li>
-                    <a class="notebook-link" href="https://nbviewer.org/github/Snax777/notebooks/blob/main/housing_price/notebook/house_price_prediction.ipynb" target="_blank">
-                        - Housing Price Prediction
+                    - <a class="notebook-link" href="https://nbviewer.org/github/Snax777/notebooks/blob/main/housing_price/notebook/house_price_prediction.ipynb" target="_blank">
+                        Housing Price Prediction
                     </a>
                 </li>
             </ul>
+        </li>
+        <li>
+            <a class="project-link" href="https://replit.com/@Snax777/basicchessapp" target="_blank">Basic Chess App</a>
         </li>
     </ul>
 
