Added chess app project

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                     </a>
                 </li>
             </ul>
-        </li>
+        </li><br>
         <li>
-            <a class="project-link" href="https://replit.com/@Snax777/basicchessapp" target="_blank">Basic Chess App</a>
+            <a class="project-link" href="https://replit.com/join/uruyuhlkie-snax777" target="_blank">Basic Chess App (Requires Replit account)</a>
         </li>
     </ul>
 
