--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
         <a href="https://github.com/Snax777" target="_blank">
             <img src="./images/github-logo.png" alt="github.com/Snax777">
         </a>
+        <a href="https://www.linkedin.com/in/sinethemba-tompelo-696739237/" target="_blank">
+            <img src="./images/linkedin-logo-reduced.jpg" alt="LinkedIn: Sinethemba Tompelo">
+        </a>
     </div>
 
     <br><h2>C.V.</h2><br>
@@ -178,6 +181,11 @@
                 <li>
                     - <a class="notebook-link" href="https://nbviewer.org/github/Snax777/notebooks/blob/main/housing_price/notebook/house_price_prediction.ipynb" target="_blank">
                         Housing Price Prediction
+                    </a>
+                </li>
+                <li>
+                    - <a class="notebook-link" href="https://nbviewer.org/github/Snax777/pred_modelling_agriculture/blob/main/notebook/logistic_reg.ipynb" target="_blank">
+                        Fertiliser-Crop Prediction
                     </a>
                 </li>
             </ul>
